@@ -103,6 +103,7 @@
 	* Integrated a patch for OMake support contributed by Dmitry Bely
 	* Replaced Unix newlines by platform newlines
 	* Optimized an often used function
+	* Added 'insert spaces instead of tabulations' option for the O'Caml editor
 	
 	
 	
